# alfredalt

./: AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
resources/: AppIcon.icns
scripts/: TODO.md  generate_swift_bridge.sh  release.sh
src/: app.rs  backend.rs  db.rs  hotkey.rs  lib.rs  main.rs  models.rs
swift/: README.md
swift/App/: AlfredAlternativeApp.swift  AutoUpdater.swift  BlockNoteCodec.swift  ContentView.swift  GlobalHotKeyMonitor.swift  HotKeyManager.swift  InlineImageTextEditor.swift  KeyEventMonitor.swift  LauncherViewModel.swift  RustBridgeClient.swift  SettingsStore.swift  ThemeManager.swift  UpdateChecker.swift  WindowConfigurator.swift
