[package]
name = "alfred_alt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
directories = "5"
eframe = { version = "0.27", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.27"
global-hotkey = "0.5"
once_cell = "1"
rusqlite = { version = "0.31", features = ["bundled", "unlock_notify", "modern_sqlite"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
arboard = "3"
