[package]
name = "alfred_alt"
version = "0.1.0"
edition = "2024"
default-run = "alfred_alt"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
anyhow = "1"
directories = "5"
once_cell = "1"
rusqlite = { version = "0.31", features = ["bundled", "unlock_notify", "modern_sqlite"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
uniffi = "0.29"
uniffi_bindgen = "0.29.5"
