[package]
name = "alfred_alt"
version = "1.4.7"
edition = "2024"
default-run = "alfred_alt"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
anyhow = "1"
directories = "5"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.22"
thiserror = "1"
uniffi = "0.29"
uniffi_bindgen = "0.29.5"
